src/main/java/com/example/fresher_manager/exception/error/MaxTestCompletedException.java
package com.example.fresher_manager.exception.error;

public class MaxTestCompletedException extends RuntimeException{
    public MaxTestCompletedException(String message){
        super(message);
    }
}
